--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">Minimalistic Price Converter</string>
     <string name="action_settings">Settings</string>
     <string name="action_add_shitcoin">Add shitcoin</string>
-    <string name="delete_btc">Bitcoin cannot be uninvented. It will outlive all fiat shitcoin.</string>
+    <string name="delete_btc">Bitcoin cannot be uninvented. It will outlive all fiat shitcoins.</string>
     <string name="btc">BTC</string>
 
     <string-array name="bitcoin">
