--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,19 @@
 <resources>
     <string name="app_name">Minimalistic Price Converter</string>
-    <string name="action_settings">Settings</string>
+    <string name="action_about">About</string>
     <string name="action_add_shitcoin">Add shitcoin</string>
     <string name="delete_btc">Bitcoin cannot be uninvented. It will outlive all fiat shitcoins.</string>
     <string name="btc">BTC</string>
+    <string name="github_link">
+        Check the <a href="https://github.com/Minimalistic-Apps/price-converter">source code</a>
+    </string>
+    <string name="mail_link">
+        <a href="mailto:hank.milliken94@protonmail.com">hank.milliken94@protonmail.com</a>
+    </string>
+    <string name="license">
+        License: <a href="https://github.com/Minimalistic-Apps/price-converter/blob/master/LICENSE">MIT</a>
+    </string>
+    <string name="version">Version</string>
 
     <string-array name="bitcoin">
         <item>BTC</item>
