Update UI changes and other changes

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,11 @@
 <resources>
-    <string name="app_name">Price Converter</string>
+    <string name="app_name">Minimalistic Apps</string>
 
     <string name="dark_mode">Dark Mode</string>
     <string name="add">Add</string>
-    <string name="price_converter">Price Converter</string>
+    <string name="search_currency">Search Currency</string>
+    <string name="confirmation_dialog_desc">Are you sure you want to delete this coin?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
 
 </resources>
